Updating date insertion wording

--- a/release-scripts/generate-release-notes.ipynb
+++ b/release-scripts/generate-release-notes.ipynb
@@ -243,7 +243,7 @@
     "<a id='toc3_2_'></a>\n",
     "\n",
     "### Add the date to release notes \n",
-    "This block writes the specified date as the title of the new release notes file.\n",
+    "This block writes the specified date as the title (for dispaly) and date (for listing sorting) of the new release notes file.\n",
     "\n",
     "**It will also open up the newly created `release-notes.qmd` file for you so you don't have to go looking for it.**"
    ]
@@ -558,7 +558,7 @@
     "<a id='toc5_2_'></a>\n",
     "\n",
     "### Update sidebar \n",
-    "This block will go into our releases `_sidebar.yaml` file and add the new release notes so it shows up on the sidebar of the docsite under the \"Releases\" section. "
+    "This block will go into our releases `_sidebar.yaml` file and add the new release notes so it shows up on the sidenav of the docsite under the \"Releases\" section. "
    ]
   },
   {
