Setup for input version

--- a/release-scripts/generate-release-notes.ipynb
+++ b/release-scripts/generate-release-notes.ipynb
@@ -209,6 +209,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Define the unified version\n",
+    "\n",
+    "Set the unified ValidMind version here associated with the release in accordance with our [customer-managed release versioning conventions](https://github.com/validmind/installation/blob/main/site/installation/Customer-managed-releases.qmd), for example `25.03.06`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gro.input_version()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<a id='toc3_'></a>\n",
     "\n",
     "## Extracting PR information "
