--- a/release-scripts/generate-release-notes.ipynb
+++ b/release-scripts/generate-release-notes.ipynb
@@ -220,7 +220,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "unified_version = gro.input_version()"
+    "unified_version = f\"Unified version `{gro.input_version()}`\""
    ]
   },
   {
