Editing insertion of version

--- a/release-scripts/generate-release-notes.ipynb
+++ b/release-scripts/generate-release-notes.ipynb
@@ -261,7 +261,7 @@
     "<a id='toc3_2_'></a>\n",
     "\n",
     "### Add the date to release notes \n",
-    "This block writes the specified date as the title (for dispaly) and date (for listing sorting) of the new release notes file.\n",
+    "This block writes the specified date as the title (for display) and date (for listing sorting) of the new release notes file.\n",
     "\n",
     "**It will also open up the newly created `release-notes.qmd` file for you so you don't have to go looking for it.**"
    ]
