Editing insertion of version in notebook

--- a/release-scripts/generate-release-notes.ipynb
+++ b/release-scripts/generate-release-notes.ipynb
@@ -272,7 +272,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gro.create_release_qmd(output_file, gro.original_release_date, gro.release_datetime.strftime(\"%Y-%m-%d\"))"
+    "gro.create_release_qmd(output_file, gro.original_release_date, gro.release_datetime.strftime(\"%Y-%m-%d\"), unified_version)"
    ]
   },
   {
