Updating template date sort

--- a/internal/templates/yearly-releases.qmd
+++ b/internal/templates/yearly-releases.qmd
@@ -10,7 +10,7 @@ listing:
   - id: 0000-releases
     type: grid
     max-description-length: 250
-    sort: false
+    sort: "date desc"
     fields: [title, subtitle, description]
     contents:
         - ./**/**.qmd
