Editing generation ToC

--- a/release-scripts/generate-release-notes.ipynb
+++ b/release-scripts/generate-release-notes.ipynb
@@ -30,6 +30,7 @@
     "  - [Create categories from labels](#toc2_3_)    \n",
     "  - [Collect GitHub URLs](#toc2_4_)    \n",
     "  - [Set the release date](#toc2_5_)    \n",
+    "  - [Define the unified version](#toc2_6_)   \n",
     "- [Extracting PR information](#toc3_)    \n",
     "  - [Create release folder and file](#toc3_1_)    \n",
     "  - [Add the date to release notes ](#toc3_2_)    \n",
@@ -209,9 +210,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='toc2_6_'></a>\n",
+    "\n",
     "### Define the unified version\n",
     "\n",
-    "Set the unified ValidMind version here associated with the release in accordance with our [customer-managed release versioning conventions](https://github.com/validmind/installation/blob/main/site/installation/Customer-managed-releases.qmd), for example `25.03.06`:"
+    "This cell will prompt you to enter the unified ValidMind version here associated with the release in accordance with our [customer-managed release versioning conventions](https://github.com/validmind/installation/blob/main/site/installation/Customer-managed-releases.qmd), for example `25.03.06`:"
    ]
   },
   {
