Simplify process explanation

--- a/site/guide/attestation/working-with-attestations.qmd
+++ b/site/guide/attestation/working-with-attestations.qmd
@@ -41,7 +41,7 @@ Model owners and validators each see a banner on their dashboard when an attesta
 
 ![Dashboard prompt for attestations](attestation-banner.png){width="80%" fig-alt="Attestation prompt with a link to the attestation labelled 'Open Attestations'" .screenshot}
 
-The process tracks progress from questionnaire assignment to final sign-off. Responsibilities are shared — the model owner completes the questionnaire and the validator reviews, requests changes if needed, and signs off:
+Responsibilities for the attestation process are shared:
 
 ::: {.tc}
 ```{mermaid}
@@ -69,16 +69,7 @@ ___
 The platform maintains a history of all status changes and notes.
 :::
 
-**Model owners** are responsible for moving the questionnaire through these states:
-
-- **Not Started** — When attestation is first assigned to the model owner
-- **In Progress** — While the model owner completes the questionnaire or addresses change requests
-- **Ready for Review** — When the model owner has submitted the completed questionnaire
-
-**Validators** are responsible for moving the questionnaire through these states:
-
-- **Reviewed** — When a validator has reviewed the questionnaire
-- **Signed Off** — Final state after a validator has signed off
+The model owner is responsible for completing the questionnaire and addressing change requests from their reviewer. In turn, the validator is responsible for reviewing the questionnaire, requesting any necessary changes, and signing off.
 
 ## How do I create meaningful attestation questionnaires?
 
