Revert all -notebooks/.zip & API reference title to vm-lib vv2.8.13

--- a/site/notebooks/tutorials/model_development/2-start_development_process.ipynb
+++ b/site/notebooks/tutorials/model_development/2-start_development_process.ipynb
@@ -74,6 +74,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='toc2_'></a>\n",
+    "\n",
+    "## Setting up"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<a id='toc2_1_'></a>\n",
     "\n",
     "### Initialize the ValidMind Library\n",
