--- a/site/validmind/validmind/tests.qmd
+++ b/site/validmind/validmind/tests.qmd
@@ -20,21 +20,13 @@ ValidMind Tests Module
 
 ::: {.signature}
 
-<span class="kw">def</span><span class="name">list_tests</span>(<span class="params"><span class="n">filter</span><span class="p">:</span><span class="n">Optional</span><span class="p">\[</span><span class="nb">str</span><span class="p">\]</span><span class="o">=</span><span class="kc">None</span><span class="muted">,</span></span><span class="params"><span class="n">task</span><span class="p">:</span><span class="n">Optional</span><span class="p">\[</span><span class="nb">str</span><span class="p">\]</span><span class="o">=</span><span class="kc">None</span><span class="muted">,</span></span><span class="params"><span class="n">tags</span><span class="p">:</span><span class="n">Optional</span><span class="p">\[</span><span class="n">List</span><span class="p">\[</span><span class="nb">str</span><span class="p">\]</span><span class="p">\]</span><span class="o">=</span><span class="kc">None</span><span class="muted">,</span></span><span class="params"><span class="n">pretty</span><span class="p">:</span><span class="nb">bool</span><span class="o">=</span><span class="kc">True</span><span class="muted">,</span></span><span class="params"><span class="n">truncate</span><span class="p">:</span><span class="nb">bool</span><span class="o">=</span><span class="kc">True</span></span>)<span class="p"> → </span><span class="return-annotation"><span class="n">Union</span><span class="p">\[</span><span class="n">List</span><span class="p">\[</span><span class="nb">str</span><span class="p">\]</span><span class="p">, </span><span class="n">None</span><span class="p">\]</span></span>:
+<span class="kw">def</span><span class="name">list_tests</span>(<span class="params"><span class="n">filter</span><span class="p">:</span><span class="n">Optional</span><span class="p">\[</span><span class="nb">str</span><span class="p">\]</span><span class="o">=</span><span class="kc">None</span><span class="muted">,</span></span><span class="params"><span class="n">task</span><span class="p">:</span><span class="n">Optional</span><span class="p">\[</span><span class="nb">str</span><span class="p">\]</span><span class="o">=</span><span class="kc">None</span><span class="muted">,</span></span><span class="params"><span class="n">tags</span><span class="p">:</span><span class="n">Optional</span><span class="p">\[</span><span class="n">List</span><span class="p">\[</span><span class="nb">str</span><span class="p">\]</span><span class="p">\]</span><span class="o">=</span><span class="kc">None</span><span class="muted">,</span></span><span class="params"><span class="n">pretty</span><span class="p">:</span><span class="nb">bool</span><span class="o">=</span><span class="kc">True</span><span class="muted">,</span></span><span class="params"><span class="n">truncate</span><span class="p">:</span><span class="nb">bool</span><span class="o">=</span><span class="kc">True</span></span>)<span class="p"> → </span><span class="return-annotation"><span class="n">Union</span><span class="p">\[</span><span class="n">Dict</span><span class="p">\[</span><span class="nb">str</span><span class="p">, </span><span class="n">Callable</span><span class="p">\[</span><span class="n">...</span><span class="p">, </span><span class="n">Any</span><span class="p">\]</span><span class="p">\]</span><span class="p">, </span><span class="n">None</span><span class="p">\]</span></span>:
 
 :::
 
 <!-- docstring.jinja2 -->
 
-List all tests in the tests directory.
-
-**Arguments**
-
-- `filter (str, optional)`: Find tests where the ID, tasks or tags match the filter string. Defaults to None.
-- `task (str, optional)`: Find tests that match the task. Can be used to narrow down matches from the filter string. Defaults to None.
-- `tags (list, optional)`: Find tests that match list of tags. Can be used to narrow down matches from the filter string. Defaults to None.
-- `pretty (bool, optional)`: If True, returns a pandas DataFrame with a formatted table. Defaults to True.
-- `truncate (bool, optional)`: If True, truncates the test description to the first line. Defaults to True. (only used if pretty=True)
+List all available tests with optional filtering
 
 ## load_test<span class="suffix"></span>
 
@@ -56,7 +48,6 @@ Test IDs are in the format `namespace.path_to_module.TestClassOrFuncName[:tag]`.
 
 - `test_id (str)`: The test ID in the format `namespace.path_to_module.TestName[:tag]`
 - `test_func (callable, optional)`: The test function to load. If not provided, the test will be loaded from the test provider. Defaults to None.
-- `reload (bool, optional)`: If True, reload the test even if it's already loaded. Defaults to False.
 
 ## describe_test<span class="suffix"></span>
 
@@ -70,14 +61,7 @@ Test IDs are in the format `namespace.path_to_module.TestClassOrFuncName[:tag]`.
 
 <!-- docstring.jinja2 -->
 
-Get or show details about the test
-
-This function can be used to see test details including the test name, description, required inputs and default params. It can also be used to get a dictionary of the above information for programmatic use.
-
-**Arguments**
-
-- `test_id (str, optional)`: The test ID. Defaults to None.
-- `raw (bool, optional)`: If True, returns a dictionary with the test details. Defaults to False.
+Describe a test's functionality and parameters
 
 ## run_test<span class="suffix"></span>
 
@@ -85,7 +69,7 @@ This function can be used to see test details including the test name, descripti
 
 ::: {.signature}
 
-<span class="kw">def</span><span class="name">run_test</span>(<span class="params"><span class="n">test_id</span><span class="p">:</span><span class="n">Union</span><span class="p">\[</span><span class="n">TestID</span><span class="p"> (Union of </span><a href="/validmind/validmind/tests/data_validation.qmd">validmind.data_validation.\*</a><span class="p">, </span><a href="/validmind/validmind/tests/model_validation.qmd">validmind.model_validation.\*</a><span class="p">, </span><a href="/validmind/validmind/tests/prompt_validation.qmd">validmind.prompt_validation.\*</a><span class="p"> and </span><span class="nb">str</span><span class="p">)</span><span class="p">, </span><span class="n">None</span><span class="p">\]</span><span class="o">=</span><span class="kc">None</span><span class="muted">,</span></span><span class="params"><span class="n">name</span><span class="p">:</span><span class="n">Union</span><span class="p">\[</span><span class="nb">str</span><span class="p">, </span><span class="n">None</span><span class="p">\]</span><span class="o">=</span><span class="kc">None</span><span class="muted">,</span></span><span class="params"><span class="n">unit_metrics</span><span class="p">:</span><span class="n">Union</span><span class="p">\[</span><span class="n">List</span><span class="p">\[</span><span class="n">TestID</span><span class="p"> (Unit metrics from </span><a href="/validmind/validmind/unit_metrics.qmd">validmind.unit_metrics.\*</a><span class="p">)</span><span class="p">\]</span><span class="p">, </span><span class="n">None</span><span class="p">\]</span><span class="o">=</span><span class="kc">None</span><span class="muted">,</span></span><span class="params"><span class="n">inputs</span><span class="p">:</span><span class="n">Union</span><span class="p">\[</span><span class="n">Dict</span><span class="p">\[</span><span class="nb">str</span><span class="p">, </span><span class="n">Any</span><span class="p">\]</span><span class="p">, </span><span class="n">None</span><span class="p">\]</span><span class="o">=</span><span class="kc">None</span><span class="muted">,</span></span><span class="params"><span class="n">input_grid</span><span class="p">:</span><span class="n">Union</span><span class="p">\[</span><span class="n">Dict</span><span class="p">\[</span><span class="nb">str</span><span class="p">, </span><span class="n">List</span><span class="p">\[</span><span class="n">Any</span><span class="p">\]</span><span class="p">\]</span><span class="p">, </span><span class="n">List</span><span class="p">\[</span><span class="n">Dict</span><span class="p">\[</span><span class="nb">str</span><span class="p">, </span><span class="n">Any</span><span class="p">\]</span><span class="p">\]</span><span class="p">, </span><span class="n">None</span><span class="p">\]</span><span class="o">=</span><span class="kc">None</span><span class="muted">,</span></span><span class="params"><span class="n">params</span><span class="p">:</span><span class="n">Union</span><span class="p">\[</span><span class="n">Dict</span><span class="p">\[</span><span class="nb">str</span><span class="p">, </span><span class="n">Any</span><span class="p">\]</span><span class="p">, </span><span class="n">None</span><span class="p">\]</span><span class="o">=</span><span class="kc">None</span><span class="muted">,</span></span><span class="params"><span class="n">param_grid</span><span class="p">:</span><span class="n">Union</span><span class="p">\[</span><span class="n">Dict</span><span class="p">\[</span><span class="nb">str</span><span class="p">, </span><span class="n">List</span><span class="p">\[</span><span class="n">Any</span><span class="p">\]</span><span class="p">\]</span><span class="p">, </span><span class="n">List</span><span class="p">\[</span><span class="n">Dict</span><span class="p">\[</span><span class="nb">str</span><span class="p">, </span><span class="n">Any</span><span class="p">\]</span><span class="p">\]</span><span class="p">, </span><span class="n">None</span><span class="p">\]</span><span class="o">=</span><span class="kc">None</span><span class="muted">,</span></span><span class="params"><span class="n">show</span><span class="p">:</span><span class="nb">bool</span><span class="o">=</span><span class="kc">True</span><span class="muted">,</span></span><span class="params"><span class="n">generate_description</span><span class="p">:</span><span class="nb">bool</span><span class="o">=</span><span class="kc">True</span><span class="muted">,</span></span><span class="params"><span class="n">title</span><span class="p">:</span><span class="n">Optional</span><span class="p">\[</span><span class="nb">str</span><span class="p">\]</span><span class="o">=</span><span class="kc">None</span><span class="muted">,</span></span><span class="params"><span class="n">post_process_fn</span><span class="p">:</span><span class="n">Union</span><span class="p">\[</span><span class="n">Callable</span><span class="p">\[</span><span class="p">\[</span><a href="/validmind/validmind/vm_models.qmd#testresult">validmind.vm_models.TestResult</a><span class="p">\]</span><span class="p">, </span><span class="n">None</span><span class="p">\]</span><span class="p">, </span><span class="n">None</span><span class="p">\]</span><span class="o">=</span><span class="kc">None</span><span class="muted">,</span></span><span class="params"><span class="n">show_params</span><span class="p">:</span><span class="nb">bool</span><span class="o">=</span><span class="kc">True</span><span class="muted">,</span></span><span class="params"><span class="n">\*\*kwargs</span></span>)<span class="p"> → </span><span class="return-annotation"><a href="/validmind/validmind/vm_models.qmd#testresult">validmind.vm_models.TestResult</a></span>:
+<span class="kw">def</span><span class="name">run_test</span>(<span class="params"><span class="n">test_id</span><span class="p">:</span><span class="n">Union</span><span class="p">\[</span><span class="n">TestID</span><span class="p"> (Union of </span><a href="/validmind/validmind/tests/data_validation.qmd">validmind.data_validation.\*</a><span class="p">, </span><a href="/validmind/validmind/tests/model_validation.qmd">validmind.model_validation.\*</a><span class="p">, </span><a href="/validmind/validmind/tests/prompt_validation.qmd">validmind.prompt_validation.\*</a><span class="p"> and </span><span class="nb">str</span><span class="p">)</span><span class="p">, </span><span class="n">None</span><span class="p">\]</span><span class="o">=</span><span class="kc">None</span><span class="muted">,</span></span><span class="params"><span class="n">name</span><span class="p">:</span><span class="n">Union</span><span class="p">\[</span><span class="nb">str</span><span class="p">, </span><span class="n">None</span><span class="p">\]</span><span class="o">=</span><span class="kc">None</span><span class="muted">,</span></span><span class="params"><span class="n">unit_metrics</span><span class="p">:</span><span class="n">Union</span><span class="p">\[</span><span class="n">List</span><span class="p">\[</span><span class="n">TestID</span><span class="p"> (Unit metrics from </span><a href="/validmind/validmind/unit_metrics.qmd">validmind.unit_metrics.\*</a><span class="p">)</span><span class="p">\]</span><span class="p">, </span><span class="n">None</span><span class="p">\]</span><span class="o">=</span><span class="kc">None</span><span class="muted">,</span></span><span class="params"><span class="n">inputs</span><span class="p">:</span><span class="n">Union</span><span class="p">\[</span><span class="n">Dict</span><span class="p">\[</span><span class="nb">str</span><span class="p">, </span><span class="n">Any</span><span class="p">\]</span><span class="p">, </span><span class="n">None</span><span class="p">\]</span><span class="o">=</span><span class="kc">None</span><span class="muted">,</span></span><span class="params"><span class="n">input_grid</span><span class="p">:</span><span class="n">Union</span><span class="p">\[</span><span class="n">Dict</span><span class="p">\[</span><span class="nb">str</span><span class="p">, </span><span class="n">List</span><span class="p">\[</span><span class="n">Any</span><span class="p">\]</span><span class="p">\]</span><span class="p">, </span><span class="n">List</span><span class="p">\[</span><span class="n">Dict</span><span class="p">\[</span><span class="nb">str</span><span class="p">, </span><span class="n">Any</span><span class="p">\]</span><span class="p">\]</span><span class="p">, </span><span class="n">None</span><span class="p">\]</span><span class="o">=</span><span class="kc">None</span><span class="muted">,</span></span><span class="params"><span class="n">params</span><span class="p">:</span><span class="n">Union</span><span class="p">\[</span><span class="n">Dict</span><span class="p">\[</span><span class="nb">str</span><span class="p">, </span><span class="n">Any</span><span class="p">\]</span><span class="p">, </span><span class="n">None</span><span class="p">\]</span><span class="o">=</span><span class="kc">None</span><span class="muted">,</span></span><span class="params"><span class="n">param_grid</span><span class="p">:</span><span class="n">Union</span><span class="p">\[</span><span class="n">Dict</span><span class="p">\[</span><span class="nb">str</span><span class="p">, </span><span class="n">List</span><span class="p">\[</span><span class="n">Any</span><span class="p">\]</span><span class="p">\]</span><span class="p">, </span><span class="n">List</span><span class="p">\[</span><span class="n">Dict</span><span class="p">\[</span><span class="nb">str</span><span class="p">, </span><span class="n">Any</span><span class="p">\]</span><span class="p">\]</span><span class="p">, </span><span class="n">None</span><span class="p">\]</span><span class="o">=</span><span class="kc">None</span><span class="muted">,</span></span><span class="params"><span class="n">show</span><span class="p">:</span><span class="nb">bool</span><span class="o">=</span><span class="kc">True</span><span class="muted">,</span></span><span class="params"><span class="n">generate_description</span><span class="p">:</span><span class="nb">bool</span><span class="o">=</span><span class="kc">True</span><span class="muted">,</span></span><span class="params"><span class="n">title</span><span class="p">:</span><span class="n">Optional</span><span class="p">\[</span><span class="nb">str</span><span class="p">\]</span><span class="o">=</span><span class="kc">None</span><span class="muted">,</span></span><span class="params"><span class="n">post_process_fn</span><span class="p">:</span><span class="n">Union</span><span class="p">\[</span><span class="n">Callable</span><span class="p">\[</span><span class="p">\[</span><a href="/validmind/validmind/vm_models.qmd#testresult">validmind.vm_models.TestResult</a><span class="p">\]</span><span class="p">, </span><span class="n">None</span><span class="p">\]</span><span class="p">, </span><span class="n">None</span><span class="p">\]</span><span class="o">=</span><span class="kc">None</span><span class="muted">,</span></span><span class="params"><span class="n">\*\*kwargs</span></span>)<span class="p"> → </span><span class="return-annotation"><a href="/validmind/validmind/vm_models.qmd#testresult">validmind.vm_models.TestResult</a></span>:
 
 :::
 
@@ -112,7 +96,6 @@ This function is the main entry point for running tests. It can run simple unit 
 - `generate_description (bool, optional)`: Whether to generate a description. Defaults to True.
 - `title (str)`: Custom title for the test result
 - `post_process_fn (Callable[[TestResult], None])`: Function to post-process the test result
-- `show_params (bool, optional)`: Whether to include parameter values in figure titles for comparison tests. Defaults to True.
 
 **Returns**
 
@@ -129,13 +112,13 @@ This function is the main entry point for running tests. It can run simple unit 
 
 ::: {.signature}
 
-<span class="kw">def</span><span class="name">list_tags</span>()<span class="p"> → </span><span class="return-annotation"><span class="n">List</span><span class="p">\[</span><span class="nb">str</span><span class="p">\]</span></span>:
+<span class="kw">def</span><span class="name">list_tags</span>()<span class="p"> → </span><span class="return-annotation"><span class="nb">Set</span><span class="p">\[</span><span class="nb">str</span><span class="p">\]</span></span>:
 
 :::
 
 <!-- docstring.jinja2 -->
 
-List all unique available tags
+List all available tags
 
 ## list_tasks<span class="suffix"></span>
 
@@ -143,13 +126,13 @@ List all unique available tags
 
 ::: {.signature}
 
-<span class="kw">def</span><span class="name">list_tasks</span>()<span class="p"> → </span><span class="return-annotation"><span class="n">List</span><span class="p">\[</span><span class="nb">str</span><span class="p">\]</span></span>:
+<span class="kw">def</span><span class="name">list_tasks</span>()<span class="p"> → </span><span class="return-annotation"><span class="nb">Set</span><span class="p">\[</span><span class="nb">str</span><span class="p">\]</span></span>:
 
 :::
 
 <!-- docstring.jinja2 -->
 
-List all unique available tasks
+List all available tasks
 
 ## list_tasks_and_tags<span class="suffix"></span>
 
@@ -163,11 +146,7 @@ List all unique available tasks
 
 <!-- docstring.jinja2 -->
 
-List all task types and their associated tags, with one row per task type and all tags for a task type in one row.
-
-**Returns**
-
-- A DataFrame with 'Task Type' and concatenated 'Tags'.
+List all available tasks and tags
 
 ## test<span class="suffix"></span>
 
